Neubot 0.4.2-rc6 [2011-09-18]
	* scripts/sed_inplace: clarify help message
	* scripts/sed_inplace: quote the pattern
	* updater/unix.py: remove duplicate informational message
	* updater/unix.py: saner interval between two updates checks
	* MacOS: don't log on stderr in SH scripts
	* Release neubot/0.4.2-rc6

Neubot 0.4.2-rc5 [2011-09-16]
	* updater/unix.py: more robustness in the main loop
	* updater/unix.py: note we should install a signal handler
	* updater/unix.py: mark a possibly-redundant piece of code
	* updater/unix.py: debug-friendlier syslog output
	* updater/unix.py: more frequent check for updates
	* updater/unix.py: syslog cmdline to verify signature
	* doc/updater/unix.txt: more documentation
	* Merge branch 'pu.updater' into next
	* Release neubot/0.4.2-rc5

Neubot 0.4.2-rc4 [2011-09-16]
	* MacOS: Remove Neubot-pkg
	* MacOS: add neubot-pkg
	* MacOS doc: s/Neubot-VERSION.pkg/neubot-VERSION.pkg/
	* Merge branch 'pu.MacOS' into next
	* database: fix regression with old clients
	* database/_table_utils.py: allow null entries
	* table_bittorrent.py table_speedtest.py: pylintify
	* neubot.nsi: make sure we delete all from autostart
	* neubot.nsi: Typo
	* neubot.nsi: Want to run as admin
	* Merge branch 'pu.win32-installer' into next
	* Release neubot/0.4.2-rc4

Neubot 0.4.2-rc3 [2011-09-15]
	* doc: updater/unix.py: no need to use current version number
	* doc: MacOS/installer.txt: mention the ``latest`` file
	* MacOS: makepkg.py: also create the ``latest`` file
	* Merge branches 'pu.MacOS' and 'pu.doc' into next
	* scripts/fixperms: fix permissions
	* neubot.nsi: do not autostart neubot
	* Makefile: force UID=0 and GID=0 when installing
	* Release neubot/0.4.2-rc3

Neubot 0.4.2-rc2 [2011-09-10]
	* MacOS/makepkg.py: be python2.6-compatible
	* www: privacy.js: don't mix 1/0 and true/false in settings.html
	* www: settings.html: clarify that some settings require restart
	* doc: MacOS/installer.txt: update
	* Merge branches 'pu.MacOS' and 'pu.www' into next