@@ -58,7 +58,7 @@ class Viewer(gtk.Window):
         if ICON:
             self.set_icon_from_file(ICON)
 
-        self.set_title('Neubot 0.4.2-rc6')
+        self.set_title('Neubot 0.4.2')
         self.connect('destroy', gtk.main_quit)
         self.set_size_request(width, height)
         self._open_web_page(uri)
