@@ -1,6 +1,6 @@
 .\" Man page generated from reStructeredText.
 .
-.TH NEUBOT 1 "2011-09-06" "Neubot 0.4.2-rc6" "Neubot manual"
+.TH NEUBOT 1 "2011-09-06" "Neubot 0.4.2" "Neubot manual"
 .SH NAME
 neubot \- The network neutrality bot
 .
